--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 Hello world, it's Piero Birello. I am a PhD student in Network and Data Science at Central European University, Vienna.
 I obtained my Bsc in Physics from Alma Mater Studiorum Bologna, and my MSc in Physics of Complex Systems after attending a joint program offered by Politecnico di Torino, SISSA Trieste, Sorbonne Université, Université Paris-Cité and Université Paris-Saclay.
 I have research experience in diverse multidisciplinary areas: computational epidemiology (IPLESP, Paris), mathematical economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).
-I am interested in studying real world problems through original, principled mathematical and computational solutions. 
+I am interested in studying real world problems through original, principled mathematical and computational solutions. Happy to hear from you at Birello_Piero@phd.ceu.edu.
 
