--- a/index.html
+++ b/index.html
@@ -1,6 +1,39 @@
 
-Hello world, it's Piero Birello. I am a PhD student in Network and Data Science at Central European University, Vienna.
-I obtained my Bsc in Physics from Alma Mater Studiorum Bologna, and my MSc in Physics of Complex Systems after attending a joint program offered by Politecnico di Torino, SISSA Trieste, Sorbonne Université, Université Paris-Cité and Université Paris-Saclay.
-I have research experience in diverse multidisciplinary areas: computational epidemiology (IPLESP, Paris), mathematical economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).
-I am interested in studying real world problems through original, principled mathematical and computational solutions. Happy to hear from you at Birello_Piero@phd.ceu.edu.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Piero Birello</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 40px;
+      max-width: 800px;
+    }
+    p {
+      margin-bottom: 20px;
+    }
+    .email {
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+
+  <p>Hello world, it's Piero Birello. I am a PhD student in Network and Data Science at Central European University, Vienna.</p>
+
+  <p>I obtained my BSc in Physics from Alma Mater Studiorum Bologna, and my MSc in Physics of Complex Systems after attending a joint program offered by Politecnico di Torino, SISSA Trieste, Sorbonne Université, Université Paris-Cité, and Université Paris-Saclay.</p>
+
+  <p>I have research experience in diverse multidisciplinary areas: Computational Epidemiology (IPLESP, Paris), Mathematical Economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).</p>
+
+  <p>Broadly, I am interested in studying real-world problems through original, principled mathematical and computational solutions.</p>
+
+  <p>Currently, I’m working on spatial analysis and statistics for studying urban systems, and studying Bayesian Statistics and Causal Inference.</p>
+
+  <p>Happy to hear from you at <span class="email">Birello_Piero@phd.ceu.edu</span>.</p>
+
+</body>
+</html>
+
 
