--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta charset="UTF-8">
   <title>Piero Birello</title>
   <style>
+    @font-face {
+  font-family: 'Latin Modern Roman';
+  src: url('latinmodern-roman.otf') format('opentype');
+}
     body {
-      font-family: Arial, sans-serif;
+      text-align: center;
+      font-family: 'Latin Modern Roman', serif;
       line-height: 1.6;
       margin: 40px;
-      max-width: 800px;
+      max-width: 1200px;
     }
     p {
       margin-bottom: 20px;
@@ -21,15 +26,13 @@
 </head>
 <body>
 
-  <p>Hello world, it's Piero Birello. I am a PhD student in Network and Data Science at Central European University, Vienna.</p>
+  <p>Hello world, it's <strong style="color: darkred;">Piero Birello</strong>. I am a PhD student in Network and Data Science at Central European University, Vienna.</p>
 
   <p>I obtained my BSc in Physics from Alma Mater Studiorum Bologna, and my MSc in Physics of Complex Systems after attending a joint program offered by Politecnico di Torino, SISSA Trieste, Sorbonne Université, Université Paris-Cité, and Université Paris-Saclay.</p>
 
   <p>I have research experience in diverse multidisciplinary areas: Computational Epidemiology (IPLESP, Paris), Mathematical Economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).</p>
 
-  <p>Broadly, I am interested in studying real-world problems through original, principled mathematical and computational solutions.</p>
-
-  <p>Currently, I’m working on spatial analysis and statistics for studying urban systems, and studying Bayesian Statistics and Causal Inference.</p>
+  <p>Broadly, I am interested in studying real-world problems through original, principled mathematical and computational solutions. Currently, I’m working on spatial analysis and statistics for studying urban systems, and studying Bayesian Statistics and Causal Inference.</p>
 
   <p>Happy to hear from you at <span class="email">Birello_Piero@phd.ceu.edu</span>.</p>
 
