--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   src: url('latinmodern-roman.otf') format('opentype');
 }
     body {
-      text-align: center;
       font-family: 'Latin Modern Roman', serif;
       line-height: 1.6;
-      margin: 40px;
+      margin: 80px;
       max-width: 1200px;
     }
     p {
@@ -32,7 +31,7 @@
 
   <p>I have research experience in diverse multidisciplinary areas: Computational Epidemiology (IPLESP, Paris), Mathematical Economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).</p>
 
-  <p>Broadly, I am interested in studying real-world problems through original, principled mathematical and computational solutions. Currently, I’m working on spatial analysis and statistics for studying urban systems, and studying Bayesian Statistics and Causal Inference.</p>
+  <p>Broadly, I am interested in studying real-world problems in social, economic and technological systems through original, principled mathematical and computational solutions. Currently, I’m working in applications of Statistics and Data Science in the Social Sciences and Urban Studies. Mostly studying Spatial Statistics, Bayesian Statistics, Causal Inference and ML.</p>
 
   <p>Happy to hear from you at <span class="email">Birello_Piero@phd.ceu.edu</span>.</p>
 
