--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <p>I have research experience in diverse multidisciplinary areas: Computational Epidemiology (IPLESP, Paris), Mathematical Economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).</p>
 
-  <p>Broadly, I am interested in studying real-world problems in social, economic and technological systems through original, principled mathematical and computational solutions. Currently, I’m working in applications of Statistics and Data Science in the Social Sciences and Urban Studies. Mostly studying Spatial Statistics, Bayesian Statistics, Causal Inference, ML and Networks.</p>
+  <p>Broadly, I am interested in studying real-world problems in social, economic and technological systems through original, principled mathematical and computational solutions. <strong style="color: #FFBF00;">Currently, I’m working in applications of Statistics and Data Science in the Social Sciences and Urban Studies. Mostly studying Spatial Statistics, Bayesian Statistics, Causal Inference, ML and Networks.</strong></p>
 
   <p>Happy to hear from you at <span class="email">Birello_Piero@phd.ceu.edu</span>.</p>
     
