--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <p>I have research experience in diverse multidisciplinary areas: Computational Epidemiology (IPLESP, Paris), Mathematical Economics (Politecnico di Torino), Data Science and Computational Social Science (Eurecat, Barcelona).</p>
 
-  <p><span style="color: #666666;">Broadly, I am interested in studying real-world problems in social, economic and technological systems through tailored, principled mathematical and computational tools. Currently, I’m working in Quantitative Social Sciences and Urban Studies. Mostly studying Spatial Statistics, Bayesian Statistics, Causal Inference, ML and Networks.</span></p>
+  <p><span style="color: #666666;">Broadly, I am interested in studying real-world problems in social, economic and technological systems through tailored, principled mathematical and computational tools. Currently, I’m working in Quantitative Social Sciences and Urban Studies. Mostly studying Spatial Statistics, Bayesian Statistics, Causal Inference, ML and Graphs.</span></p>
 
   <p>Happy to hear from you at <span class="email">Birello_Piero@phd.ceu.edu</span>.</p>
     
